force-app/zurich-base/main/default/objects/ExternalRequestErrorEvent__e/ExternalRequestErrorEvent__e.object-meta.xml
<CustomObject>
    <label>External Request Error Event</label>
    <pluralLabel>External Request Error Events</pluralLabel>
</CustomObject>