force-app/zurich-base/main/default/objects/ExternalRequestErrorEvent__e/fields/ContentFormat__c.field-meta.xml
<CustomField>
    <fullName>ContentFormat__c</fullName>
    <label>Content Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>