force-app/zurich-base/main/default/objects/ExternalRequestErrorEvent__e/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <label>Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>