force-app/zurich-base/main/default/objects/ExternalRequestErrorEvent__e/fields/JobId__c.field-meta.xml
<CustomField>
    <fullName>JobId__c</fullName>
    <label>Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>