force-app/zurich-base/main/default/objects/ExternalRequestErrorEvent__e/fields/ThrowingTime__c.field-meta.xml
<CustomField>
    <fullName>ThrowingTime__c</fullName>
    <label>Throwing Time</label>
    <type>DateTime</type>
</CustomField>